--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,36 @@
 
 html {
     box-sizing: border-box;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
+    line-height: 1.6;
+}
+
+h1, h2, h3 {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    display: block;
+}
+
+button {
+    color: white;
+    min-width: 300px;
+    padding: 1.25em 2em;
+    border: none;
+    border-radius: 6rem;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: hsl(198, 50%, 50%);
+}
+
+button:hover{
+    background: linear-gradient(to right, hsl(176, 50%, 50%), hsl(198, 50%, 50%));
 }
 
 .container {
@@ -29,7 +58,7 @@ html {
     align-items: center;
     padding: 2em 1.5em;
     font-family: 'Raleway', sans-serif;
-    max-width: 1340px;
+    max-width: 1240px;
     margin: 0 auto;
 }
 
@@ -49,8 +78,31 @@ html {
     margin-left: 2em;
 }
 
-a {
-    color: white;
-    text-decoration: none;
-    display: block;
+.hero {
+    margin: 0 auto;
+    padding: 2em 1.5em;
+    text-align: center;
+    background-color: var(--intro-bottom-color);
+}
+
+.hero > * {
+    margin-top: 1.5em;
+}
+
+.hero__image {
+    max-width: 90%;
+}
+
+.hero__cta {
+    margin-top: 3em;
+}
+
+@media (min-width:1025px) {
+    .hero {
+        width: 40%;
+    }
+
+    .hero__image {
+        max-width: 100%;
+    }
 }
