--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,14 @@ button:hover{
     background-color: var(--intro-bottom-color);
 }
 
+.container--dark {
+    background-color: var(--main-bg-color);
+}
+
+.container--gradient {
+    background: linear-gradient(180deg, var(--intro-bottom-color) 70%, var(--main-bg-color) 50%);
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -80,9 +88,12 @@ button:hover{
 
 .hero {
     margin: 0 auto;
-    padding: 2em 1.5em;
+    padding: 2em 1.5em 8em;
     text-align: center;
-    background-color: var(--intro-bottom-color);
+    background: url('../images/bg-curvy-mobile.svg');
+    background-size: 125%;
+    background-position: center 65%;
+    background-repeat: no-repeat;
 }
 
 .hero > * {
@@ -97,12 +108,51 @@ button:hover{
     margin-top: 3em;
 }
 
+.features {
+    max-width: 1240px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 5em;
+}
+
+.features__element {
+    width: 35.715em;
+    margin: 0 auto;
+    padding: 4em;
+    text-align: center;
+}
+
+.features__title {
+    margin-top: 1.5em;
+}
+
+.features__description {
+    margin-top: 0.75em;
+}
+
+.demo {
+    padding-top: 5em;
+}
+
 @media (min-width:1025px) {
     .hero {
         width: 40%;
+        background: initial;
     }
 
     .hero__image {
         max-width: 100%;
+    }
+
+    .container--test {
+        background: url('../images/bg-curvy-desktop.svg');
+        background-size: 100%;
+        background-position: center 110%;
+        background-repeat: no-repeat;
+    }
+
+    .container--gradient {
+        background: linear-gradient(180deg, var(--intro-bottom-color) 100%, var(--main-bg-color) 50%);
     }
 }
