--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
 
 html {
     box-sizing: border-box;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
     color: white;
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
