--- a/css/style.css
+++ b/css/style.css
@@ -1,162 +1,2 @@
-:root {
-    --intro-bottom-color: hsl(217, 28%, 15%);
-    --main-bg-color: hsl(218, 28%, 13%);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: inherit;
-}
-
-html {
-    box-sizing: border-box;
-    width: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    color: white;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-    line-height: 1.6;
-}
-
-h1, h2, h3 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-}
-
-a {
-    color: white;
-    text-decoration: none;
-    display: block;
-}
-
-button {
-    color: white;
-    min-width: 300px;
-    padding: 1.25em 2em;
-    border: none;
-    border-radius: 6rem;
-    font-size: 16px;
-    font-weight: 700;
-    background-color: hsl(198, 50%, 50%);
-}
-
-button:hover{
-    background: linear-gradient(to right, hsl(176, 50%, 50%), hsl(198, 50%, 50%));
-}
-
-.container {
-    background-color: var(--intro-bottom-color);
-}
-
-.container--dark {
-    background-color: var(--main-bg-color);
-}
-
-.container--gradient {
-    background: linear-gradient(180deg, var(--intro-bottom-color) 70%, var(--main-bg-color) 50%);
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2em 1.5em;
-    font-family: 'Raleway', sans-serif;
-    max-width: 1240px;
-    margin: 0 auto;
-}
-
-.header__logo {
-    max-width: 22.5%;
-    height: auto;
-    display: block;
-}
-
-.nav__list {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.nav__list > li + li {
-    margin-left: 2em;
-}
-
-.hero {
-    margin: 0 auto;
-    padding: 2em 1.5em 8em;
-    text-align: center;
-    background: url('../images/bg-curvy-mobile.svg');
-    background-size: 125%;
-    background-position: center 65%;
-    background-repeat: no-repeat;
-}
-
-.hero > * {
-    margin-top: 1.5em;
-}
-
-.hero__image {
-    max-width: 90%;
-}
-
-.hero__cta {
-    margin-top: 3em;
-}
-
-.features {
-    max-width: 1240px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    padding-bottom: 5em;
-}
-
-.features__element {
-    width: 35.715em;
-    margin: 0 auto;
-    padding: 4em;
-    text-align: center;
-}
-
-.features__title {
-    margin-top: 1.5em;
-}
-
-.features__description {
-    margin-top: 0.75em;
-}
-
-.demo {
-    padding-top: 5em;
-}
-
-@media (min-width:1025px) {
-    .hero {
-        width: 40%;
-        background: initial;
-    }
-
-    .hero__image {
-        max-width: 100%;
-    }
-
-    .container--test {
-        background: url('../images/bg-curvy-desktop.svg');
-        background-size: 100%;
-        background-position: center 110%;
-        background-repeat: no-repeat;
-    }
-
-    .container--gradient {
-        background: linear-gradient(180deg, var(--intro-bottom-color) 100%, var(--main-bg-color) 50%);
-    }
-}
+p {
+  color: red; }
