Complete mobile hero section

--- a/css/style.css
+++ b/css/style.css
@@ -29,35 +29,51 @@ button {
   border: 0; }
 
 .wrap {
-  background-color: #1B2330; }
+  background-color: #1c2431; }
 
 .nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 2em 2em 0 2em;
-  margin-bottom: 4em; }
+  background-color: #1B2330; }
   .nav__logo {
-    height: 2em; }
+    height: 1.8em; }
   .nav__item {
+    font-size: 0.75rem;
     margin-left: 1.5em; }
     .nav__item--first {
       margin-left: auto; }
 
 .hero {
-  margin: 2em;
+  padding: 4em 2em 0;
   text-align: center;
-  position: relative; }
-  .hero::after {
-    content: "";
+  position: relative;
+  z-index: 0; }
+  .hero::before {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    content: "";
+    bottom: 16em;
     left: 0;
-    background-image: url("./images/bg-curvy-mobile.svg");
-    z-index: 1; }
+    height: 11em;
+    width: 100%;
+    background: url("/images/bg-curvy-mobile.svg") bottom, #1c2431;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    z-index: -1; }
+  .hero::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    height: 16em;
+    width: 100%;
+    background: #181f2a;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    z-index: -1; }
   .hero__image {
-    height: 18em;
+    height: 16em;
     margin-bottom: 2.5em; }
     .hero__image img {
       margin: 0 auto; }
@@ -66,11 +82,12 @@ button {
     font-weight: 700;
     margin-bottom: 1em; }
   .hero__desc {
-    margin-bottom: 2em;
+    padding: 0 1em;
+    margin-bottom: 2.5em;
     line-height: 1.7; }
   .hero__action {
     color: white;
     font-weight: 700;
-    padding: 1.5em 6em;
+    padding: 1.2em 6em;
     border-radius: 10em;
     background-image: linear-gradient(to right, #65e2d9, #339ecc); }
