--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -1,20 +1,38 @@
 .hero {
-  margin: 2em;
+  padding: 4em 2em 0;
   text-align: center;
   position: relative;
+  z-index: 0;
+
+  &::before {
+    position: absolute;
+    content: "";
+    bottom: 16em;
+    left: 0;
+    height: 11em;
+    width: 100%;
+    background: url("/images/bg-curvy-mobile.svg") bottom, hsl(217, 28%, 15%);;
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    z-index: -1;
+    
+  }
 
   &::after {
-    content: "";
     position: absolute;
-    width: 200px;
-    height: 200px;
+    content: "";
+    bottom: 0;
     left: 0;
-    background-image: url("./images/bg-curvy-mobile.svg");
-    z-index: 1;
+    height: 16em;
+    width: 100%;
+    background:  hsl(218, 28%, 13%);
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    z-index: -1;
   }
 
   &__image {
-    height: 18em;
+    height: 16em;
     margin-bottom: 2.5em;
 
     img {
@@ -29,14 +47,15 @@
   }
 
   &__desc {
-    margin-bottom: 2em;
+    padding: 0 1em;
+    margin-bottom: 2.5em;
     line-height: 1.7;
   }
 
   &__action {
     color: white;
     font-weight: 700;
-    padding: 1.5em 6em;
+    padding: 1.2em 6em;
     border-radius: 10em;
     background-image: linear-gradient(to right, hsl(176, 68%, 64%), hsl(198, 60%, 50%));
   }
