--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -3,13 +3,14 @@
   justify-content: space-between;
   align-items: center;
   padding: 2em 2em 0 2em;
-  margin-bottom: 4em;
+  background-color: #1B2330;
 
   &__logo {
-    height: 2em;
+    height: 1.8em;
   }
 
   &__item {
+    font-size: 0.75rem;
     margin-left: 1.5em;
 
     &--first {
