--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
   font-size: 14px; }
 
 h1, h2, h3 {
-  font-family: Raleway; }
+  font-family: Raleway;
+  font-weight: 700; }
 
 ul {
   list-style-type: none; }
@@ -27,9 +28,6 @@ img {
 
 button {
   border: 0; }
-
-.wrap {
-  background-color: #1c2431; }
 
 .nav {
   display: flex;
@@ -49,11 +47,12 @@ button {
   padding: 4em 2em 0;
   text-align: center;
   position: relative;
+  background-color: #1c2431;
   z-index: 0; }
   .hero::before {
     position: absolute;
     content: "";
-    bottom: 16em;
+    bottom: 17em;
     left: 0;
     height: 11em;
     width: 100%;
@@ -66,7 +65,7 @@ button {
     content: "";
     bottom: 0;
     left: 0;
-    height: 16em;
+    height: 17em;
     width: 100%;
     background: #181f2a;
     background-size: 100% auto;
@@ -79,8 +78,8 @@ button {
       margin: 0 auto; }
   .hero__title {
     font-size: 1.5rem;
-    font-weight: 700;
-    margin-bottom: 1em; }
+    margin-bottom: 1em;
+    line-height: 1.5; }
   .hero__desc {
     padding: 0 1em;
     margin-bottom: 2.5em;
@@ -91,3 +90,24 @@ button {
     padding: 1.2em 6em;
     border-radius: 10em;
     background-image: linear-gradient(to right, #65e2d9, #339ecc); }
+
+.features {
+  background-color: red; }
+  .features__image {
+    height: 4em;
+    margin-bottom: 2em; }
+    .features__image img {
+      margin: 0 auto; }
+  .features__list {
+    padding: 0 2em;
+    text-align: center; }
+    .features__list:first-child {
+      padding-top: 10em; }
+  .features__item {
+    margin-top: 8em;
+    display: inline-block;
+    margin: 0 auto; }
+    .features__item + .features__item {
+      margin-top: 6em; }
+  .features__title {
+    margin-bottom: 0.5em; }
