--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -21,6 +21,7 @@ body {
 
 h1, h2, h3 {
   font-family: Raleway;
+  font-weight: 700;
 }
 
 ul {
@@ -35,8 +36,4 @@ img {
 
 button {
   border: 0;
-}
-
-.wrap {
-  background-color: hsl(217, 28%, 15%);
 }
