--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -2,16 +2,17 @@
   padding: 4em 2em 0;
   text-align: center;
   position: relative;
+  background-color: hsl(217, 28%, 15%);
   z-index: 0;
 
   &::before {
     position: absolute;
     content: "";
-    bottom: 16em;
+    bottom: 17em;
     left: 0;
     height: 11em;
     width: 100%;
-    background: url("/images/bg-curvy-mobile.svg") bottom, hsl(217, 28%, 15%);;
+    background: url("/images/bg-curvy-mobile.svg") bottom, hsl(217, 28%, 15%);
     background-size: 100% auto;
     background-repeat: no-repeat;
     z-index: -1;
@@ -23,7 +24,7 @@
     content: "";
     bottom: 0;
     left: 0;
-    height: 16em;
+    height: 17em;
     width: 100%;
     background:  hsl(218, 28%, 13%);
     background-size: 100% auto;
@@ -42,8 +43,8 @@
 
   &__title {
     font-size: 1.5rem;
-    font-weight: 700;
     margin-bottom: 1em;
+    line-height: 1.5
   }
 
   &__desc {
