--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ h1, h2, h3 {
   font-family: Raleway;
   font-weight: 700; }
 
+h1 {
+  font-size: 1.5rem; }
+
+h2 {
+  font-size: 1.15rem; }
+
 ul {
   list-style-type: none; }
 
@@ -44,7 +50,7 @@ button {
       margin-left: auto; }
 
 .hero {
-  padding: 4em 2em 0;
+  padding: 3.5em 2em 0;
   text-align: center;
   position: relative;
   background-color: #1c2431;
@@ -52,7 +58,7 @@ button {
   .hero::before {
     position: absolute;
     content: "";
-    bottom: 17em;
+    bottom: 15em;
     left: 0;
     height: 11em;
     width: 100%;
@@ -65,7 +71,7 @@ button {
     content: "";
     bottom: 0;
     left: 0;
-    height: 17em;
+    height: 15em;
     width: 100%;
     background: #181f2a;
     background-size: 100% auto;
@@ -73,21 +79,20 @@ button {
     z-index: -1; }
   .hero__image {
     height: 16em;
-    margin-bottom: 2em; }
+    margin-bottom: 2.5em; }
     .hero__image img {
       margin: 0 auto; }
   .hero__title {
-    font-size: 1.5rem;
-    margin-bottom: 0.6em;
+    margin-bottom: 0.7em;
     line-height: 1.4; }
   .hero__desc {
     padding: 0 1em;
-    margin-bottom: 2.5em;
+    margin-bottom: 2.2em;
     line-height: 1.7; }
   .hero__action {
     color: white;
     font-weight: 700;
-    padding: 1.2em 6em;
+    padding: 1.2em 6.2em;
     border-radius: 10em;
     background-image: linear-gradient(to right, #65e2d9, #339ecc); }
 
@@ -109,5 +114,34 @@ button {
     .features__item + .features__item {
       margin-top: 7em; }
   .features__title {
-    font-size: 1.15rem;
     margin-bottom: 0.5em; }
+
+.usp {
+  background-color: #181f2a;
+  padding: 9.5em 2em 0; }
+  .usp__image {
+    margin-bottom: 4em;
+    height: 16em; }
+    .usp__image img {
+      margin: 0 auto; }
+  .usp__content p {
+    margin-bottom: 1.15em;
+    line-height: 1.5; }
+  .usp__title {
+    text-align: center;
+    font-size: 1.2rem;
+    margin-bottom: 1em; }
+  .usp__cta {
+    width: calc(11em);
+    display: inline-block;
+    position: relative;
+    font-size: 0.75rem;
+    color: #5FDCD6;
+    padding-bottom: 0.4em;
+    border-bottom: 1px solid #5FDCD6; }
+    .usp__cta img {
+      height: 16px;
+      display: inline-block;
+      position: absolute;
+      bottom: 2;
+      right: 0; }
