--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,6 +24,14 @@ h1, h2, h3 {
   font-weight: 700;
 }
 
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.15rem;
+}
+
 ul {
   list-style-type: none;
 }
