--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,9 @@ button {
 
 .usp {
   background-color: #181f2a;
-  padding: 9.5em 2em 0; }
+  padding: 12em 2em 0; }
   .usp__image {
-    margin-bottom: 4em;
+    margin-bottom: 3.75em;
     height: 16em; }
     .usp__image img {
       margin: 0 auto; }
@@ -130,14 +130,14 @@ button {
   .usp__title {
     text-align: center;
     font-size: 1.2rem;
-    margin-bottom: 1em; }
+    margin-bottom: 0.8em; }
   .usp__cta {
-    width: calc(11em);
+    width: 11em;
     display: inline-block;
     position: relative;
     font-size: 0.75rem;
     color: #5FDCD6;
-    padding-bottom: 0.4em;
+    padding-bottom: 0.3em;
     border-bottom: 1px solid #5FDCD6; }
     .usp__cta img {
       height: 16px;
@@ -145,3 +145,49 @@ button {
       position: absolute;
       bottom: 2;
       right: 0; }
+
+.testimonials {
+  padding: 12em 3em;
+  background-color: #181f2a;
+  position: relative;
+  z-index: 1; }
+  .testimonials__item {
+    padding: 1.75em 1.75em;
+    background-color: #202a3c;
+    border-radius: 0.25em; }
+    .testimonials__item + .testimonials__item {
+      margin-top: 1.6em; }
+    .testimonials__item--first {
+      position: relative; }
+      .testimonials__item--first::before {
+        content: "";
+        height: 55px;
+        width: 45px;
+        position: absolute;
+        top: -1.05em;
+        left: 0.8em;
+        background-image: url("../images/bg-quotes.png");
+        background-repeat: no-repeat;
+        background-size: calc(55px * 0.4) calc(45px * 0.4);
+        z-index: -1; }
+  .testimonials__text {
+    font-size: 0.65rem;
+    line-height: 1.8; }
+  .testimonials__author {
+    margin-top: 1.1em;
+    display: flex;
+    align-items: center; }
+  .testimonials__author-image {
+    display: flex;
+    height: 1.75em; }
+    .testimonials__author-image img {
+      border-radius: 50%; }
+  .testimonials__author-meta {
+    margin-left: 0.7em; }
+  .testimonials__author-name {
+    font-weight: 700;
+    font-size: 0.6rem;
+    margin-bottom: 0.25em;
+    letter-spacing: 1px; }
+  .testimonials__author-status {
+    font-size: 0.5rem; }
