--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,12 @@ img {
 button {
   border: 0; }
 
+.action-button {
+  color: white;
+  font-weight: 700;
+  border-radius: 10em;
+  background-image: linear-gradient(to right, #65e2d9, #339ecc); }
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -90,11 +96,7 @@ button {
     margin-bottom: 2.2em;
     line-height: 1.7; }
   .hero__action {
-    color: white;
-    font-weight: 700;
-    padding: 1.2em 6.2em;
-    border-radius: 10em;
-    background-image: linear-gradient(to right, #65e2d9, #339ecc); }
+    padding: 1.2em 6.2em; }
 
 .features {
   background-color: #181f2a; }
@@ -147,7 +149,7 @@ button {
       right: 0; }
 
 .testimonials {
-  padding: 12em 3em;
+  padding: 12em 3em 11.5em;
   background-color: #181f2a;
   position: relative;
   z-index: 1; }
@@ -156,7 +158,7 @@ button {
     background-color: #202a3c;
     border-radius: 0.25em; }
     .testimonials__item + .testimonials__item {
-      margin-top: 1.6em; }
+      margin-top: 1.5em; }
     .testimonials__item--first {
       position: relative; }
       .testimonials__item--first::before {
@@ -191,3 +193,32 @@ button {
     letter-spacing: 1px; }
   .testimonials__author-status {
     font-size: 0.5rem; }
+
+.registration {
+  background: linear-gradient(to bottom, #181f2a 0%, #181f2a 50%, #0b1523 50%, #0b1523 100%);
+  text-align: center;
+  padding: 0em 1.5em; }
+  .registration__box {
+    padding: 3em 2em 2.5em;
+    margin-bottom: 1em;
+    background-color: #1B2330;
+    border-radius: 0.5em; }
+  .registration__title {
+    margin-bottom: 1em; }
+  .registration__desc {
+    font-size: 0.8rem;
+    line-height: 1.7;
+    margin-bottom: 2.4em; }
+  .registration__input {
+    border: none;
+    margin-bottom: 1.8em; }
+    .registration__input input {
+      border: none;
+      width: 100%;
+      padding: 1em;
+      height: 3.6em;
+      border-radius: 10em; }
+  .registration__button {
+    width: 100%;
+    height: 3.6em;
+    padding: 1.1em; }
