--- a/sass/_testimonials.scss
+++ b/sass/_testimonials.scss
@@ -1,5 +1,5 @@
 .testimonials {
-    padding: 12em 3em;
+    padding: 12em 3em 11.5em;
     background-color: hsl(218, 28%, 13%);
     position: relative;
     z-index: 1;
@@ -10,7 +10,7 @@
         border-radius: 0.25em;
 
         & + .testimonials__item {
-            margin-top: 1.6em;
+            margin-top: 1.5em;
         }
 
         &--first {
