--- a/css/style.css
+++ b/css/style.css
@@ -211,14 +211,19 @@ button {
     margin-bottom: 2.4em; }
   .registration__input {
     border: none;
-    margin-bottom: 1.8em; }
+    margin-bottom: 1.8em;
+    height: 3.5em; }
     .registration__input input {
       border: none;
       width: 100%;
       padding: 1em;
-      height: 3.6em;
+      height: 100%;
       border-radius: 10em; }
+      .registration__input input::placeholder {
+        padding-left: 2em;
+        font-size: 0.6rem;
+        color: rgba(128, 128, 128, 0.5); }
   .registration__button {
     width: 100%;
-    height: 3.6em;
+    height: 3.5em;
     padding: 1.1em; }
