--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -31,20 +31,27 @@
     &__input {
         border: none;
         margin-bottom: 1.8em;
+        height: 3.5em;
 
 
         input {
             border: none;
             width: 100%;
             padding: 1em;
-            height: 3.6em;
+            height: 100%;
             border-radius: 10em;
+
+            &::placeholder {
+                padding-left: 2em;
+                font-size: 0.6rem;
+                color: rgba($color: gray, $alpha: 0.5);
+            }
         }
     }
 
     &__button {
         width: 100%;
-        height: 3.6em;
+        height: 3.5em;
         padding: 1.1em;
     }
 }
