--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ button {
   padding: 1.5em 1.5em 0;
   background-color: #1B2330; }
   .nav__logo {
-    height: 1.75em; }
+    height: 1.6em; }
   .nav__item {
     font-size: 0.8rem;
     margin-left: 1.8em; }
@@ -200,9 +200,9 @@ button {
   padding: 0em 1.5em; }
   .registration__box {
     padding: 3em 2em 2.5em;
-    margin-bottom: 1em;
     background-color: #1B2330;
-    border-radius: 0.5em; }
+    border-radius: 0.5em;
+    box-shadow: 5px 10px #888888; }
   .registration__title {
     margin-bottom: 1em; }
   .registration__desc {
@@ -220,10 +220,71 @@ button {
       height: 100%;
       border-radius: 10em; }
       .registration__input input::placeholder {
-        padding-left: 2em;
+        padding-left: 1.4em;
         font-size: 0.6rem;
-        color: rgba(128, 128, 128, 0.5); }
+        color: rgba(128, 128, 128, 0.4); }
   .registration__button {
     width: 100%;
     height: 3.5em;
     padding: 1.1em; }
+
+.footer {
+  background-color: #0b1523;
+  padding: 5.55em 2.5em 0; }
+  .footer__location {
+    letter-spacing: 1px;
+    margin: 3em 0 0 2.1em;
+    line-height: 1.7;
+    position: relative; }
+    .footer__location::before {
+      content: "";
+      width: 20px;
+      height: 16px;
+      position: absolute;
+      left: -2.8em;
+      top: 0.5em;
+      background-image: url("/images/icon-location.svg");
+      background-repeat: no-repeat; }
+  .footer__number {
+    margin: 1.4em 0 0 2.1em;
+    position: relative; }
+    .footer__number::before {
+      content: "";
+      width: 18px;
+      height: 18px;
+      position: absolute;
+      left: -2.5em;
+      top: 0.2em;
+      background-image: url("/images/icon-phone.svg");
+      background-repeat: no-repeat;
+      background-size: 13px 13px; }
+  .footer__email {
+    margin: 1.4em 0 0 2.1em;
+    position: relative; }
+    .footer__email::before {
+      content: "";
+      width: 20px;
+      height: 16px;
+      position: absolute;
+      left: -2.6em;
+      top: 0.25em;
+      background-image: url("/images/icon-email.svg");
+      background-repeat: no-repeat; }
+  .footer__pages {
+    margin: 6em 0 0 -0.6em; }
+    .footer__pages > li {
+      margin-bottom: 1.3em; }
+  .footer__misc {
+    margin: 4em 0 0 -0.6em; }
+    .footer__misc > li {
+      margin-bottom: 1.3em; }
+  .footer__social {
+    margin-top: 5.9em;
+    padding-bottom: 4em;
+    display: flex;
+    justify-content: center; }
+  .footer__social-logo {
+    display: inline-block;
+    height: 2.2em; }
+    .footer__social-logo + .footer__social-logo {
+      margin-left: 1em; }
