--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -13,9 +13,9 @@
 
     &__box {
         padding: 3em 2em 2.5em;
-        margin-bottom: 1em;
         background-color: #1B2330;
         border-radius: 0.5em;
+        box-shadow: 5px 10px #888888;
     }
 
     &__title {
@@ -42,9 +42,9 @@
             border-radius: 10em;
 
             &::placeholder {
-                padding-left: 2em;
+                padding-left: 1.4em;
                 font-size: 0.6rem;
-                color: rgba($color: gray, $alpha: 0.5);
+                color: rgba($color: gray, $alpha: 0.4);
             }
         }
     }
@@ -55,4 +55,3 @@
         padding: 1.1em;
     }
 }
-
