--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -15,7 +15,7 @@
         padding: 3em 2em 2.5em;
         background-color: #1B2330;
         border-radius: 0.5em;
-        box-shadow: 5px 10px #888888;
+        box-shadow: 5px 5px 10px #000000;
     }
 
     &__title {
