--- a/sass/_hero.scss
+++ b/sass/_hero.scss
@@ -12,7 +12,7 @@
     left: 0;
     height: 11em;
     width: 100%;
-    background: url("/images/bg-curvy-mobile.svg") bottom, hsl(217, 28%, 15%);
+    background: url("./images/bg-curvy-mobile.svg") bottom, hsl(217, 28%, 15%);
     background-size: 100% auto;
     background-repeat: no-repeat;
     z-index: -1;
