--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -19,7 +19,7 @@
             position: absolute;
             left: -2.8em;
             top: 0.5em;
-            background-image: url("/images/icon-location.svg");
+            background-image: url("./images/icon-location.svg");
             background-repeat: no-repeat;
         }
     }
@@ -35,7 +35,7 @@
             position: absolute;
             left: -2.5em;
             top: 0.2em;
-            background-image: url("/images/icon-phone.svg");
+            background-image: url("./images/icon-phone.svg");
             background-repeat: no-repeat;
             background-size: 13px 13px;
         }
@@ -52,7 +52,7 @@
             position: absolute;
             left: -2.6em;
             top: 0.25em;
-            background-image: url("/images/icon-email.svg");
+            background-image: url("./images/icon-email.svg");
             background-repeat: no-repeat;
         }
     }
