--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,7 @@ button {
     margin-bottom: 2.2em;
     line-height: 1.7; }
   .hero__action {
+    height: 3.6em;
     padding: 1.2em 6.2em; }
 
 .features {
@@ -202,7 +203,7 @@ button {
     padding: 3em 2em 2.5em;
     background-color: #1B2330;
     border-radius: 0.5em;
-    box-shadow: 5px 5px 10px #000000; }
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07), 0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07), 0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07); }
   .registration__title {
     margin-bottom: 1em; }
   .registration__desc {
@@ -211,13 +212,12 @@ button {
     margin-bottom: 2.4em; }
   .registration__input {
     border: none;
-    margin-bottom: 1.8em;
-    height: 3.5em; }
+    margin-bottom: 1.7em; }
     .registration__input input {
       border: none;
       width: 100%;
+      height: 3.6em;
       padding: 1em;
-      height: 100%;
       border-radius: 10em; }
       .registration__input input::placeholder {
         padding-left: 1.4em;
@@ -225,7 +225,7 @@ button {
         color: rgba(128, 128, 128, 0.4); }
   .registration__button {
     width: 100%;
-    height: 3.5em;
+    height: 3.6em;
     padding: 1.1em; }
 
 .footer {
