--- a/sass/_registration.scss
+++ b/sass/_registration.scss
@@ -53,4 +53,48 @@
         height: 3.6em;
         padding: 1.1em;
     }
+
+    @media (min-width: 1100px) {
+        padding: 10.3em 1.5em 0;
+
+
+        background: linear-gradient(
+            to bottom,
+            hsl(218, 28%, 13%) 0%,
+            hsl(218, 28%, 13%) 75%,
+            hsl(216, 53%, 9%) 75%,
+            hsl(216, 53%, 9%) 100%
+        );
+
+        &__box {
+            max-width: 43em;
+            padding: 2.4em 1em 0.5em;
+            margin: 0 auto;
+        }
+
+        &__title {
+            font-size: 1.5rem;
+            margin-bottom: .7em;
+            letter-spacing: 1.5px;
+        }
+
+        &__desc {
+            font-size: 0.75rem;
+            width: 42.3em;
+            margin: 0 auto;
+            margin-bottom: 2.55em;
+            line-height: 1.5;
+        }
+
+        &__input {
+            display: inline-block;
+            width: 58%;
+        }
+
+        &__button {
+            display: inline-block;
+            margin-left: 1.5em;
+            width: 25%;
+        }
+    }
 }
