--- a/sass/_testimonials.scss
+++ b/sass/_testimonials.scss
@@ -18,8 +18,8 @@
 
             &::before {
                 content: "";
-                height: 55px;
-                width: 45px;
+                height: 45px;
+                width: 55px;
                 position: absolute;
                 top: -1.05em;
                 left: 0.8em;
@@ -64,5 +64,60 @@
 
     &__author-status {
         font-size: 0.5rem;
+    }
+
+    @media (min-width: 1400px) {
+        font-size: 2rem;
+        padding: 0 0;
+
+        &__list {
+            display: flex;
+            justify-content: center;
+            align-items: baseline;
+        }
+
+        &__item {
+            margin-top: 2.7em;
+            padding: 1em 0.65em 0.5em;
+            width: 8.9em;
+            border-radius: 0.15em;
+
+            & + .testimonials__item {
+                margin: 0 0 0 1.2em;
+            }
+
+            &--first {
+    
+                &::before {
+                    top: -0.9em;
+                    left: -0.2em;
+                    background-size: 55px 45px;
+                }
+            }
+        }
+
+        &__text {
+            line-height: 1.65;
+        }
+
+        &__author-image {
+            height: 0.6em;
+        }
+
+        &__author {
+            margin-top: 0.55em;
+        }
+
+        &__author-meta {
+            margin-left: 0.25em;
+        }
+
+        &__author-name {
+            font-size: 0.5rem;
+        }
+
+        &__author-status {
+            font-size: 0.4rem;
+        }
     }
 }
