--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -90,18 +90,22 @@
         }
     }
 
-    @media (min-width: 960px) { 
-        padding: 6em 1.75em 5em 7em;
+    @media (min-width: 960px) {
+        padding: 6em 6em 5em 11em;
         font-size: 0.7rem;
 
         &__content {
             display: flex;
-            justify-content: space-around;
-            margin-top: 2em;
+            justify-content: space-between;
+            margin-top: 2.2em;
+        }
+
+        &__contact {
+            margin-left: -2.5em;
         }
 
         &__logo {
-            margin-left: 1.5em;
+            margin-left: -2.5em;
         }
 
         &__location {
@@ -122,7 +126,7 @@
         }
 
         &__misc {
-            margin-top: 0;
+            margin: 0 -2em 0 -4.5em;
         }
 
         &__social {
